add api doc class
